--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-hi
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="theme-color" content="#ff6f00"/>
+  <title>Cybersecurity Quiz</title>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="shortcut icon" href="HCII_logo.svg.png">
+</head>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="js/materialize.js"></script>
+<script>
+$(document).ready(function() {
+    $(".button-collapse").sideNav();
+    $('.scrollspy').scrollSpy();
+    $('.parallax').parallax();
+    $('.modal-trigger').leanModal();
+    $('select').material_select();
+    $('.collapsible').collapsible({
+    accordion : false
+    });
+});
+</script>
+<main>
+<body background="gplaypattern.png">
+  <div class="mainpg">
+    <div class="center container">
+      <div class="row">
+        <h2 class="grey-text text-darken-2">This website will be up soon.</h2>
+      </div>
+      <div class="row">
+        <h4 class="grey-text">Thanks for your patience.</h4>
+      </div>
+    </div>
+  </div>
+</body>
+</main>
+
+<footer class="page-footer amber darken-4">
+  <div class="footer-copyright">
+    <div class="center container">
+    © 2015 Carnegie Mellon University HCII
+    </div>
+  </div>
+</footer>
+</html>
